[package]
name = "rmcp-proxy"
version = "0.1.4"
edition = "2021"
description = "A Rust bidirectional MCP proxy between stdio and SSE"
authors = ["Stephen Lacy"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "mcp-proxy"
path = "src/bin/mcp-proxy.rs"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "1f7f4d30550129f43bcbd7f526ad89614df30b56", features = [
  "server",
  "client",
  "transport-sse-server",
  "transport-streamable-http-server",
  "transport-streamable-http-client",
  "transport-child-process",
  "transport-io",
  "reqwest",
  "auth",
] }


tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7" }
tokio-stream = "0.1"
async-stream = "0.3"
pin-project = "1.0"

axum = "0.8"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.0"

clap = { version = "4", features = ["derive", "env"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
url = "2.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1.0"
eventsource-stream = "0.2"
sse-stream = "0.2"
parking_lot = "0.12"
uuid = "1.16.0"
log = "0.4.27"
dirs = "6.0.0"
env_logger = "0.11.8"
open = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
